# yuanrong-datasystem

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  AGENTS.md  BUILD.bazel  CLAUDE.md  CMakeLists.txt  LOG_README  MODULE.bazel  NOTICE  README.en.md  README.md  README_CN.md  README_EN.md  TIMEOUT_CONTROL_AUDIT_REPORT.md  TIMEOUT_E2E_VERIFICATION_PLAN.md  TIMEOUT_E2E_VERIFICATION_REPORT.md  Third_Party_Open_Source_Software_Notice  WORKSPACE  build.sh  export_datasystem_symbols.lds  install_tools.sh  setup.py  version.bzl
bazel/: BUILD.bazel  ascend_configure.bzl  build_defs.bzl  build_python.bzl  cc_proto_library.bzl  cuda_local_repo.bzl  datasystem_sdk.bzl  datasystem_sdk_cmake_config.bzl  datasystem_sdk_cpp.BUILD.tpl  ds_deps.bzl  ds_python_deps.bzl  generate_commit_id.sh  git_version.bzl  glibc_detect.bzl  grpc_deps.bzl  python_detect.bzl  version_repo.bzl  workspace_status.sh  zmq_proto.bzl
bazel/sdk/: BUILD.bazel  client_build_validation.cpp  deps.bzl  repositories.bzl  root.BUILD.bazel  stub.BUILD.bazel  validation.bzl  workspace.bzl
dsbench/: CMakeLists.txt
dsbench/src/: BUILD.bazel  args_base.cpp  args_base.h  bench_base.cpp  bench_base.h  bench_perf.cpp  bench_perf.h  main.cpp  utils.cpp  utils.h
dsbench/src/kv/: kv_args.cpp  kv_args.h  kv_bench.cpp  kv_bench.h
example/: CMakeLists.txt  README.md  kv_set_exist_get.py  run-example.sh
example/cpp/: BUILD.bazel  CMakeLists.txt  datasystem_example.cpp  hetero_client_example.cpp  hetero_client_gpu_example.cpp  kv_client_example.cpp  object_client_example.cpp  stream_client_example.cpp
example/go/: kv_client_example.go  object_client_example.go
example/java/: kv.xml  object.xml  stream.xml
example/python/: ds_tensor_client_example.py  hetero_client_example.py  kv_client_example.py  object_client_example.py
example/src/: ds_example.cpp
example/src/aes/: aes_example.cpp
example/src/kv_cache/: kv_example.cpp
example/src/object_cache/: object_example.cpp
example/src/perf/: perf_demo.cpp
example/src/state_cache/: state_example.cpp
include/datasystem/: BUILD.bazel  coordinator_server.h  data_worker.h  datasystem.h  emb_client.h  hetero_client.h  kv_client.h  object_client.h  router_client.h  state_cache.h  stream_client.h
include/datasystem/hetero/: BUILD.bazel  device_common.h  future.h
include/datasystem/hetero_cache/: device_common.h  future.h  hetero_client.h
include/datasystem/kv_cache/: kv_client.h  read_only_buffer.h
include/datasystem/object/: BUILD.bazel  BooPHF.h  buffer.h  object_buffer.h  object_enum.h  share_map_object.h  share_object.h  share_vector_object.h
include/datasystem/object_cache/: buffer.h  object_client.h  object_enum.h
include/datasystem/state_cache/: state_client.h
include/datasystem/stream/: BUILD.bazel
include/datasystem/utils/: BUILD.bazel  aes.h  connection.h  coordinator_discovery.h  device_blob.h  embedded_config.h  kv_client_config.h  service_discovery.h  status.h
python/yr/datasystem/: BUILD.bazel  __init__.py  ds_client.py  ds_tensor_client.py  emb_client.py  hetero_client.py  kv_client.py  object_client.py  service_discovery.py  stream_client.py
src/datasystem/c_api/: BUILD.bazel  CMakeLists.txt  kv_client_c_wrapper.cpp  kv_client_c_wrapper.h  object_client_c_wrapper.cpp  object_client_c_wrapper.h  status_definition.h  stream_client_c_wrapper.cpp  stream_client_c_wrapper.h  util.cpp  util.h  utilC.h
src/datasystem/client/: BUILD.bazel  CMakeLists.txt  aes.cpp  client_flags_monitor.cpp  client_flags_monitor.h  client_state_manager.h  client_worker_common_api.cpp  client_worker_common_api.h  datasystem.cpp  embedded_client_worker_api.cpp  embedded_client_worker_api.h  listen_worker.cpp  listen_worker.h  mmap_manager.cpp  mmap_manager.h  mmap_table.cpp  mmap_table.h  mmap_table_entry.h  router_client.cpp  service_discovery.cpp  urma_success_rate_tracker.cpp  urma_success_rate_tracker.h
src/datasystem/cluster/: BUILD.bazel  CMakeLists.txt
src/datasystem/common/: BUILD.bazel  CMakeLists.txt  constants.h  heartbeat_type.h
src/datasystem/coordinator/: BUILD.bazel  CMakeLists.txt  coordinator_main.cpp  coordinator_server.cpp  coordinator_server.h  coordinator_service_impl.cpp  coordinator_service_impl.h  topology_recovery_manager.cpp  topology_recovery_manager.h  watch_dispatcher_impl.cpp  watch_dispatcher_impl.h
tests/kvclient_standalone/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  config.cpp  config.h  config.json.example  config.local.json  config.notify.json  data_pattern.h  deploy.json.example  deploy.py  deploy.sh  gen_deploy_config.py  http_server.cpp  http_server.h  kv_worker.cpp  kv_worker.h  main.cpp  metrics.cpp  metrics.h  pipeline.cpp  pipeline.h  procmon.py  simple_log.h  stop.cpp  test_deploy.sh  test_e2e.sh  worker_manager.py
tests/kvclient_standalone/config/: config.json.example  config.test.json  deploy.json.example  deploy.test.json
tests/kvclient_standalone/docs/: design.md
tests/kvclient_standalone/src/: config.cpp  config.h  cpu_affinity.h  http_server.cpp  http_server.h  kv_worker.cpp  kv_worker.h  main.cpp  (+6 more)
tests/kvtest/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  deploy_client.py  deploy_common.py  deploy_coordinator.py  deploy_pods.py  deploy_worker.py
tests/st/: BUILD.bazel  CMakeLists.txt  common.h  common_distributed_ext.h  common_test.cpp  common_test.h  hashring_parser.cpp  kill_timer.h  scc.conf  st_oc_service_impl.cpp  st_oc_service_impl.h  test_main.cpp  zmq_curve_test_common.h
tests/ut/: BUILD.bazel  CMakeLists.txt  bench_helper.h  common.cpp  common.h  gen_cert.sh  gen_cert_with_passphrase.sh  test_main.cpp
transfer_engine/: .gitignore  CMakeLists.txt  PYTHON_API.md  README.md
transfer_engine/cmake/: dependency.cmake  options.cmake  proto.cmake  util.cmake
transfer_engine/proto/: transfer_engine.proto
transfer_engine/scripts/: build_python_artifacts.sh  run_cross_node_smoke_cases.sh  run_hixl_d2d_smoke_suite.sh  run_real_npu_dual_process_validation.sh
transfer_engine/src/: transfer_engine.cpp
transfer_engine/tests/: acl_test_utils.cpp  acl_test_utils.h
(+4566 files in other folders)
